# Amazing-Python

./: .gitignore  LICENSE  Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  mazegen-1.0.0-py3-none-any.whl
maze/: __init__.py  algorithms.py  ascii_renderer.py  config_parser.py  constraints.py  generator.py  gui.py  pattern.py  perfect.py  solver.py  writer.py
mazegen_pkg/: README.md  pyproject.toml
mazegen_pkg/mazegen/: __init__.py
