[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mazegen"
version = "1.0.0"
description = "Python maze generator and visualizer with GUI and ASCII output"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["maze", "generator", "algorithm", "wilson", "dfs", "pygame", "ascii"]
authors = [
    {name = "Elena Gjinaj"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/elenagjinaj21/a-maze-ing"
Repository = "https://github.com/elenagjinaj21/a-maze-ing"

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]
